--- a/cookbooks/main/files/default/gunicorn.conf
+++ b/cookbooks/main/files/default/gunicorn.conf
@@ -1,4 +1,4 @@
-description "Gunicorn for ReadTheDocs"
+description "Gunicorn for Mycelium"
 
 start on runlevel [2345]
 stop on runlevel [!2345]
@@ -9,6 +9,7 @@ respawn
 env VENV="/home/mycelium/sites/digitalmycelium.com"
 
 #Serve Gunicorn on the internal rackspace IP.
+# pulled from exec $VENV/checkouts/digitalmycelium.com/settings/postgres.py
 script
-exec sudo -u mycelium $VENV/bin/gunicorn_django --preload -w 2 --log-level debug --log-file $VENV/run/gunicorn.log -p $VENV/run/gunicorn.pid -b 127.0.0.1:8888 $VENV/checkouts/digitalmycelium.com/settings/postgres.py
+exec sudo -u mycelium $VENV/bin/gunicorn_django --preload -w 2 --log-level debug --log-file $VENV/run/gunicorn.log -p $VENV/run/gunicorn.pid -b 127.0.0.1:8888
 end script
