fab / chef deploy working :)

--- a/cookbooks/main/files/default/gunicorn.conf
+++ b/cookbooks/main/files/default/gunicorn.conf
@@ -9,7 +9,8 @@ respawn
 env VENV="/home/mycelium/sites/digitalmycelium.com"
 
 #Serve Gunicorn on the internal rackspace IP.
-# pulled from exec $VENV/checkouts/digitalmycelium.com/settings/postgres.py
+# pulled from exec:  $VENV/checkouts/digitalmycelium.com/settings/postgres.py
 script
-exec sudo -u mycelium $VENV/bin/gunicorn_django --preload -w 2 --log-level debug --log-file $VENV/run/gunicorn.log -p $VENV/run/gunicorn.pid -b 127.0.0.1:8888
+cd /home/mycelium/sites/digitalmycelium.com/checkouts/digitalmycelium.com/mycelium
+exec sudo -u mycelium /home/mycelium/sites/digitalmycelium.com/bin/gunicorn_django --preload -w 2 --log-level debug --log-file /home/mycelium/sites/digitalmycelium.com/run/gunicorn.log -p /home/mycelium/sites/digitalmycelium.com/run/gunicorn.pid -b 127.0.0.1:8888 -D
 end script
