--- a/requirements.txt
+++ b/requirements.txt
@@ -14,6 +14,7 @@ django-tagging
 BeautifulSoup
 django-extensions
 -e git://github.com/skoczen/qi-toolkit.git#egg=qi-toolkit  > 0.3.1
+python-crontab
 -e git://github.com/clintecker/django-google-analytics.git#egg=google_
 -e git://github.com/skoczen/django-form-designer.git#egg=form_designer
 django-pagination
