--- a/config.dist/nginx.conf
+++ b/config.dist/nginx.conf
@@ -14,7 +14,7 @@ events  {
 
 http  {
 #       include mime.types;
-    include /etc/nginx/mime.types
+    include /etc/nginx/mime.types;
     default_type    application/octet-stream;
 
     #log_format  main  '$remote_addr - $remote_user [$time_local] $request '
