try that requirement

--- a/requirements.txt
+++ b/requirements.txt
@@ -34,4 +34,4 @@ celery
 django-celery
 -e git://github.com/kmmbvnr/django-jenkins.git#egg=django-jenkins
 coverage >= 3.4
-git+git://github.com/jparise/nose-xcover.git#egg=nosexcover
+-e git://github.com/jparise/nose-xcover.git@coverage-3.4#egg=nosexcover
