switched to my own fork.

--- a/requirements.txt
+++ b/requirements.txt
@@ -32,7 +32,6 @@ south
 cherrypy
 celery
 django-celery
-coverage >= 3.4
--e git://github.com/jparise/nose-xcover.git@coverage-3.4#egg=nosexcover
 -e git://github.com/kmmbvnr/django-jenkins.git#egg=django-jenkins
-
+coverage >= 3.4
+-e git://github.com/skoczen/nose-xcover.git#egg=nosexcover
