diff nginx conf

--- a/config.dist/nginx.conf
+++ b/config.dist/nginx.conf
@@ -31,7 +31,7 @@ http  {
 
     server  {
             listen  80;
-            server_name     localhost www.digitalmycelium.com digitalmycelium.com;
+            server_name     localhost www.digitalmycelium.com digitalmycelium.com 50.16.140.50;
             server_name_in_redirect off;
 
             #charset koi8-r;
