502 page support - maybe even in nginx!

--- a/config.dist/nginx.conf
+++ b/config.dist/nginx.conf
@@ -52,6 +52,12 @@ http  {
 #                       root    html;
 #               }
 
+            error_page      502  /502.html;
+            location = /502.html {
+                   root   /var/www/mycelium.git/mycelium/templates;
+            }
+
+
             # proxy the PHP scripts to Apache listening on 127.0.0.1:80
             #
             #location ~ \.php$ {
