redirect to www to save a redirect

--- a/config.dist/nginx.conf
+++ b/config.dist/nginx.conf
@@ -98,7 +98,7 @@ http {
 
       location / {
         if ($host ~* ^(agoodcloud\.com|www\.agoodcloud\.com)$ ) {
-          rewrite  ^/(.*)$  https://agoodcloud.com/$1  permanent;
+          rewrite  ^/(.*)$  https://www.agoodcloud.com/$1  permanent;
         }
         return 444;
       }
