trying different cypers

--- a/config.dist/nginx.conf
+++ b/config.dist/nginx.conf
@@ -24,9 +24,9 @@ http {
   large_client_header_buffers 1 1k;
 
  ## Global SSL options
-  ssl_ciphers HIGH:!ADH:!MD5;
+  ssl_ciphers ALL:!ADH:!EXPORT56:RC4+RSA:+HIGH:+MEDIUM:+LOW:+SSLv2:+EXP;
   ssl_prefer_server_ciphers on;
-  ssl_protocols TLSv1;
+  ssl_protocols SSLv2 SSLv3 TLSv1;
   ssl_session_cache shared:SSL:10m;
   ssl_session_timeout 5m;
 
