trying media.agoodcloud

--- a/config.dist/nginx.conf
+++ b/config.dist/nginx.conf
@@ -64,21 +64,21 @@ http {
  ## handle media
    server {
       listen      127.0.0.1:80;
-      server_name  agoodcloud.com www.agoodcloud.com;
+      server_name  media.agoodcloud.com;
 
-      location /media/ {
+      location / {
               access_log  off;
               error_log   off;
               expires     max;
               root /var/www/mycelium.git;
       }
-      location /media/admin/ {
+      location /admin/ {
               access_log  off;
               error_log   off;
               expires     max;
               root /root/.virtualenvs/mycelium/lib/python2.6/site-packages/django/contrib/admin/media;
       }
-      location /media/cms/ {
+      location /cms/ {
               access_log  off;
               error_log   off;
               expires     max;
