media and lockdown of staging / digitalmycelium

--- a/config.dist/nginx.conf
+++ b/config.dist/nginx.conf
@@ -64,7 +64,7 @@ http {
  ## handle media
    server {
       listen      127.0.0.1:80;
-      server_name  media.agoodcloud.com;
+      server_name  media.agoodcloud.com media.staging.digitalmycelium.com;
 
       location / {
               access_log  off;
@@ -94,7 +94,7 @@ http {
       expires     90d;
       listen      127.0.0.1:80;
       root        /var/empty;
-      server_name agoodcloud.com www.agoodcloud.com agoodcloud.org www.agoodcloud.org agoodcloud.net www.agoodcloud.net;
+      server_name agoodcloud.com www.agoodcloud.com agoodcloud.org www.agoodcloud.org agoodcloud.net www.agoodcloud.net digitalmycelium.com www.digitalmycelium.com;
 
       location / {
         if ($host ~* ^(agoodcloud\.com|www\.agoodcloud\.com)$ ) {
