simplifying - digitalmycelium is staging

--- a/config.dist/nginx.conf
+++ b/config.dist/nginx.conf
@@ -64,7 +64,7 @@ http {
  ## handle media
    server {
       listen      127.0.0.1:80;
-      server_name  media.agoodcloud.com media.staging.digitalmycelium.com;
+      server_name  media.agoodcloud.com media.digitalmycelium.com;
 
       location / {
               access_log  off;
@@ -94,7 +94,7 @@ http {
       expires     90d;
       listen      127.0.0.1:80;
       root        /var/empty;
-      server_name agoodcloud.com www.agoodcloud.com agoodcloud.org www.agoodcloud.org agoodcloud.net www.agoodcloud.net digitalmycelium.com www.digitalmycelium.com;
+      server_name agoodcloud.com www.agoodcloud.com agoodcloud.org www.agoodcloud.org agoodcloud.net www.agoodcloud.net;
 
       location / {
         if ($host ~* ^(agoodcloud\.com|www\.agoodcloud\.com)$ ) {
@@ -107,7 +107,7 @@ http {
   # temporary - the digitalmycelium part of this should go away shortly.
   server  {
         listen  80;
-        server_name     localhost staging.digitalmycelium.com www.digitalmycelium.com digitalmycelium.com;
+        server_name     localhost digitalmycelium.com www.digitalmycelium.com;
         server_name_in_redirect off;
 
         error_page      502  /502.html;
