right root for media

--- a/config.dist/nginx.conf
+++ b/config.dist/nginx.conf
@@ -70,7 +70,7 @@ http {
               access_log  off;
               error_log   off;
               expires     max;
-              root /var/www/mycelium.git;
+              root /var/www/mycelium.git/media;
       }
       location /admin/ {
               access_log  off;
