fixing fabfile, pulling localhost

--- a/config.dist/nginx.conf
+++ b/config.dist/nginx.conf
@@ -107,7 +107,7 @@ http {
   # temporary - the digitalmycelium part of this should go away shortly.
   server  {
         listen  80;
-        server_name     localhost digitalmycelium.com www.digitalmycelium.com;
+        server_name  digitalmycelium.com www.digitalmycelium.com;
         server_name_in_redirect off;
 
         error_page      502  /502.html;
