--- a/config.dist/nginx.conf
+++ b/config.dist/nginx.conf
@@ -70,13 +70,13 @@ http {
               access_log  off;
               error_log   off;
               expires     max;
-              root /var/www/.virtualenvs/mycelium/lib/python2.6/site-packages/django/contrib/admin/media;
+              root /root/.virtualenvs/mycelium/lib/python2.6/site-packages/django/contrib/admin/media;
       }
       location /cms/ {
               access_log  off;
               error_log   off;
               expires     max;
-              root /var/www/.virtualenvs/mycelium/src/django-cms/cms/media/cms;
+              root /root/.virtualenvs/mycelium/src/django-cms/cms/media/cms;
       }     
       location / {
               access_log  off;
