symlinked media supported

--- a/config.dist/nginx.conf
+++ b/config.dist/nginx.conf
@@ -66,18 +66,19 @@ http {
       listen      80;
       server_name  media.agoodcloud.com media.digitalmycelium.com;
 
-      location /admin/ {
-              access_log  off;
-              error_log   off;
-              expires     max;
-              root /root/.virtualenvs/mycelium/lib/python2.6/site-packages/django/contrib/admin/media;
-      }
-      location /cms/ {
-              access_log  off;
-              error_log   off;
-              expires     max;
-              root /root/.virtualenvs/mycelium/src/django-cms/cms/media/cms;
-      }     
+#     symlinking for now
+#      location /admin/ {
+#              access_log  off;
+#              error_log   off;
+#              expires     max;
+#              root /root/.virtualenvs/mycelium/lib/python2.6/site-packages/django/contrib/admin/media;
+#      }
+#      location /cms/ {
+#              access_log  off;
+#              error_log   off;
+#              expires     max;
+#              root /root/.virtualenvs/mycelium/src/django-cms/cms/media/cms;
+#      }     
       location / {
               access_log  off;
               error_log   off;
