--- a/config.dist/nginx.conf
+++ b/config.dist/nginx.conf
@@ -18,10 +18,10 @@ http {
     default_type    application/octet-stream;
 
  ## Size Limits
-  client_body_buffer_size      16k;
-  client_header_buffer_size     1k;
-  client_max_body_size          1k;
-  large_client_header_buffers 1 1k;
+ #client_body_buffer_size      16k;
+ #client_header_buffer_size     1k;
+ #client_max_body_size          1k;
+ #large_client_header_buffers 1 1k;
 
  ## Global SSL options
   ssl_ciphers HIGH:!ADH:!MD5;
