--- a/config.dist/nginx.conf
+++ b/config.dist/nginx.conf
@@ -106,11 +106,12 @@ http {
       }
   }
 
-  # temporary - the digitalmycelium part of this should go away shortly.
   server  {
         listen  80;
         server_name  digitalmycelium.com www.digitalmycelium.com;
         server_name_in_redirect off;
+        auth_basic   "Restricted";
+        auth_basic_user_file  /var/www/mycelium.git/config.dist/digitalmycelium_htpasswd;
   
         error_page      502  /502.html;
         location = /502.html {
