--- a/config.dist/nginx.conf
+++ b/config.dist/nginx.conf
@@ -123,6 +123,13 @@ http {
                 proxy_set_header X-Real-IP $remote_addr;
                 proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         }
+
+        location /cache-forever/  {
+           root /tmp;
+           expires max;
+           access_log off;
+        }
+
   
         location /media/ {
                 root /var/www/mycelium.git;
