that should fix goodcloud.net and .org

--- a/config.dist/nginx.conf
+++ b/config.dist/nginx.conf
@@ -103,7 +103,7 @@ http {
       server_name agoodcloud.com www.agoodcloud.com agoodcloud.org www.agoodcloud.org agoodcloud.net www.agoodcloud.net;
 
       location / {
-        if ($host ~* ^(agoodcloud\.com|www\.agoodcloud\.com)$ ) {
+        if ($host ~* ^(agoodcloud\.com|www\.agoodcloud\.com|agoodcloud\.org|www\.agoodcloud\.org|agoodcloud\.net|www\.agoodcloud\.net)$ ) {
           rewrite  ^/(.*)$  https://www.agoodcloud.com/$1  permanent;
         }
         return 444;
