new nginx conf, move to https, disabled volunteer skills/roles

--- a/config.dist/nginx.conf
+++ b/config.dist/nginx.conf
@@ -219,9 +219,9 @@ http {
     # }
 
      ## Deny certain Referers (case insensitive)
-      if ($http_referer ~* (\dating|diamond|forsale|girl|jewelry|nudit|organic|poker|porn|poweroversoftware|sex|teen|webcam|zippo|zongdo) ) {
-        return 444;
-      }
+     #if ($http_referer ~* (\dating|diamond|forsale|girl|jewelry|nudit|organic|poker|porn|poweroversoftware|sex|teen|webcam|zippo|zongdo) ) {
+     #  return 444;
+     #}
 
      ## Only allow these full URI paths relative to document root. If you only want
      ## to reference the filename use $request_filename instead of $request_uri
