people bugfix, hopeful nginx fix

--- a/config.dist/nginx.conf
+++ b/config.dist/nginx.conf
@@ -82,9 +82,9 @@ http {
       }
 
       ## Deny illegal Host headers
-      if ($host !~* ^(agoodcloud.com|www.agoodcloud.com)$ ) {
-        return 444;
-      }
+      #if ($host !~* ^(media.agoodcloud.com|www.agoodcloud.com)$ ) {
+      #  return 444;
+      #}
 
       ## Deny certain User-Agents (case insensitive)
       # if ($http_user_agent ~* (Baiduspider|webalta|Wget|WordPress|youdao) ) {
@@ -155,7 +155,7 @@ http {
       server_name media.agoodcloud.com;
 
       location / {
-        if ($host ~* ^(media.agoodcloud\.com)$ ) {
+        if ($host  = 'media.agoodcloud.com') {
           rewrite  ^/(.*)$  https://media.agoodcloud.com/$1  permanent;
         }
         return 444;
