hopefully this config is happy

--- a/config.dist/nginx.conf
+++ b/config.dist/nginx.conf
@@ -63,38 +63,8 @@ http {
 
  ## handle media
    server {
-      access_log  /var/log/nginx/access.log main;
-      add_header  Cache-Control "public, must-revalidate";
-      error_log   /var/log/nginx/error.log info;
-      expires     90d;
-      listen      443;
-      server_name  media.agoodcloud.com
-      ssl on;
-      ssl_certificate /root/media.agoodcloud.com.crt;
-      ssl_certificate_key /root/media.agoodcloud.com.key;
-
-      ## Strict Transport Security (ForceHTTPS)
-      add_header Strict-Transport-Security "max-age=2592000; includeSubdomains";
-
-      ## Only allow GET and HEAD (and POST) request methods
-      if ($request_method !~ ^(GET|HEAD|POST)$ ) {
-         return 444;
-      }
-
-      ## Deny illegal Host headers
-      #if ($host !~* ^(media.agoodcloud.com|www.agoodcloud.com)$ ) {
-      #  return 444;
-      #}
-
-      ## Deny certain User-Agents (case insensitive)
-      # if ($http_user_agent ~* (Baiduspider|webalta|Wget|WordPress|youdao) ) {
-      #   return 444;
-      # }
-
-      ## Deny certain Referers (case insensitive)
-      if ($http_referer ~* (\dating|diamond|forsale|girl|jewelry|nudit|organic|poker|porn|poweroversoftware|sex|teen|webcam|zippo|zongdo) ) {
-        return 444;
-      }
+      listen      80;
+      server_name  media.agoodcloud.com;
 
       location / {
           access_log  off;
@@ -145,22 +115,6 @@ http {
         return 444;
       }
   }
-  server {
-      add_header Cache-Control "public, must-revalidate";
-      access_log  /var/log/nginx/access.log main;
-      error_log   /var/log/nginx/error.log info;
-      expires     90d;
-      listen      80;
-      root        /var/empty;
-      server_name media.agoodcloud.com;
-
-      location / {
-        if ($host  = 'media.agoodcloud.com') {
-          rewrite  ^/(.*)$  https://media.agoodcloud.com/$1  permanent;
-        }
-        return 444;
-      }
-  }  
 
   server  {
         listen  80;
@@ -230,8 +184,8 @@ http {
      #}
 
      ## Redirect from non-www to www
-      if ($host = 'agoodcloud.com' ) {
-        rewrite  ^/(.*)$  https://www.agoodcloud.com/$1  permanent;
+      if ($host = 'www.agoodcloud.com' ) {
+        rewrite  ^/(.*)$  https://agoodcloud.com/$1  permanent;
       }
 
      ## Stop Image and Document Hijacking
