better nginx, I think

--- a/config.dist/nginx.conf
+++ b/config.dist/nginx.conf
@@ -64,29 +64,13 @@ http {
  ## handle media
    server {
       listen      80;
-      server_name  media.agoodcloud.com;
+      server_name  media.agoodcloud.com media.digitalmycelium.com;;
 
       location / {
           access_log  off;
           error_log   off;
           expires     max;
           root /var/www/mycelium.git/media;
-      }
-      location /cache-forever/  {
-         root /tmp;
-         expires max;
-         access_log off;
-      }
-  }
-   server {
-      listen      80;
-      server_name  media.digitalmycelium.com;
-
-      location / {
-              access_log  off;
-              error_log   off;
-              expires     max;
-              root /var/www/mycelium.git/media;
       }
       location /cache-forever/  {
          root /tmp;
@@ -194,15 +178,6 @@ http {
           return 444;
         }
       }
-
-     ## Restricted Access directory
-     # location ^~ /secure/ {
-     #       allow 127.0.0.1/32;
-     #       allow 10.10.10.0/24;
-     #       deny all;
-     #       auth_basic "RESTRICTED ACCESS";
-     #       auth_basic_user_file /var/www/htdocs/secure/access_list;
-     #   }
 
       error_page      502  /502.html;
       location = /502.html {
