trying redirect everywhere to nonwww

--- a/config.dist/nginx.conf
+++ b/config.dist/nginx.conf
@@ -94,7 +94,7 @@ http {
 
       location / {
         if ($host ~* ^(agoodcloud\.com|www\.agoodcloud\.com|agoodcloud\.org|www\.agoodcloud\.org|agoodcloud\.net|www\.agoodcloud\.net)$ ) {
-          rewrite  ^/(.*)$  https://www.agoodcloud.com/$1  permanent;
+          rewrite  ^/(.*)$  https://agoodcloud.com/$1  permanent;
         }
         return 444;
       }
