--- a/config.dist/nginx.conf
+++ b/config.dist/nginx.conf
@@ -64,7 +64,7 @@ http {
  ## handle media
    server {
       listen      80;
-      server_name  media.agoodcloud.com media.digitalmycelium.com;;
+      server_name  media.agoodcloud.com media.digitalmycelium.com;
 
       location / {
           access_log  off;
