changed to chained cert

--- a/config.dist/nginx.conf
+++ b/config.dist/nginx.conf
@@ -135,7 +135,7 @@ http {
 
      ## SSL Certs (specific to this URL)
       ssl on;
-      ssl_certificate /root/agoodcloud.com.crt;
+      ssl_certificate /root/agoodcloud.com.chained.crt;
       ssl_certificate_key /root/agoodcloud.com.key;
 
      ## Strict Transport Security (ForceHTTPS)
