maybe this fixes the refresh problem

--- a/config.dist/nginx.conf
+++ b/config.dist/nginx.conf
@@ -131,6 +131,7 @@ http {
       expires     90d;
       listen      443;
       root        /var/www/mycelium.git;
+      server_name_in_redirect off;
       server_name  agoodcloud.com www.agoodcloud.com;
 
      ## SSL Certs (specific to this URL)
