trying without the redirect?

--- a/config.dist/nginx.conf
+++ b/config.dist/nginx.conf
@@ -169,9 +169,9 @@ http {
      #}
 
      ## Redirect from non-www to www
-      if ($host = 'www.agoodcloud.com' ) {
-        rewrite  ^/(.*)$  https://agoodcloud.com/$1  permanent;
-      }
+     #if ($host = 'www.agoodcloud.com' ) {
+     #  rewrite  ^/(.*)$  https://agoodcloud.com/$1  permanent;
+     #}
 
      ## Stop Image and Document Hijacking
       location ~* (\.jpg|\.gif|\.png|\.css)$ {
