--- a/config.dist/nginx.conf
+++ b/config.dist/nginx.conf
@@ -153,9 +153,9 @@ http {
       }
 
      ## Deny certain User-Agents (case insensitive)
-    # if ($http_user_agent ~* (Baiduspider|webalta|Wget|WordPress|youdao) ) {
-    #   return 444;
-    # }
+     #if ($http_user_agent ~* (Baiduspider|webalta|Wget|WordPress|youdao) ) {
+     #  return 444;
+     #}
 
      ## Deny certain Referers (case insensitive)
      #if ($http_referer ~* (\dating|diamond|forsale|girl|jewelry|nudit|organic|poker|porn|poweroversoftware|sex|teen|webcam|zippo|zongdo) ) {
@@ -169,9 +169,9 @@ http {
      #}
 
      ## Redirect from non-www to www
-     #if ($host = 'www.agoodcloud.com' ) {
-     #  rewrite  ^/(.*)$  https://agoodcloud.com/$1  permanent;
-     #}
+     if ($host = 'www.agoodcloud.com' ) {
+       rewrite  ^/(.*)$  https://agoodcloud.com/$1  permanent;
+     }
 
      ## Stop Image and Document Hijacking
       location ~* (\.jpg|\.gif|\.png|\.css)$ {
