switched the rest of the MEDIA_URLS

--- a/requirements.txt
+++ b/requirements.txt
@@ -46,3 +46,4 @@ django-taggit-templatetags
 #django-storages
 -e hg+https://bitbucket.org/david/django-storages#egg=storages
 django-mediasync
+gitpython
