--- a/requirements.stable.txt
+++ b/requirements.stable.txt
@@ -3,14 +3,15 @@
 PIL==1.1.7
 python-memcached==1.47
 gunicorn==0.12.0
--e git://github.com/skoczen/django-cms.git@ab27b1845d49030f49a8ff5b1f450b47fdfe20ad#egg=django_cms-2.1.0.beta3-py2.6-dev
+#-e git://github.com/skoczen/django-cms.git#egg=django-cms
+-e git://github.com/divio/django-cms.git@6db7026376177434472b7583ba88f183b5e96790#egg=django_cms-2.1.3-py2.6-dev
 pyparsing==1.5.5
 django-xmlrpc==0.1.3
 akismet==0.2.0
 django-taggit==0.9.2
 BeautifulSoup==3.2.0
 django-extensions==0.6
--e git://github.com/skoczen/qi-toolkit.git@05b7a7c1bc71aba931d967af597bce899be6e71b#egg=qi_toolkit-0.6-py2.6-dev
+-e git://github.com/skoczen/qi-toolkit.git@92ace53de7b74b6287d66ba62cf80c4e7c3b3a92#egg=qi_toolkit-0.7-py2.6-dev
 python-crontab==0.9.5
 -e git://github.com/skoczen/django-form-designer.git@b9d1716acbda950e440fb13e877d3836e7b0a124#egg=form_designer-3-py2.6-dev
 django-nose-selenium==0.6
@@ -23,31 +24,48 @@ nose==1.0.0
 ipython==0.10.1
 django-nose==0.1.2
 nose-exclude==0.1.5
--e git://github.com/Almad/django-sane-testing.git@378e214c7a17ec2c2c3b60fad33e6b7797db8b3a#egg=djangosanetesting-0.5.10-py2.6-dev
+-e git://github.com/Almad/django-sane-testing.git@43134814754b6b99058d3727424ee5b2e37238c3#egg=djangosanetesting-0.5.10-py2.6-dev
 celery==2.2.2
 django-celery==2.2.2
 -e git://github.com/kmmbvnr/django-jenkins.git@5d8842303c304beaf28a00af83ce4cc4aca4bd08#egg=django_jenkins-0.10.0-py2.6-dev
 coverage==3.4
 -e git://github.com/skoczen/nose-xcover.git@cccc0e83ce2ed117903768587177a937c144e152#egg=nosexcover-1.0.4-py2.6-dev
 -e hg+https://django-dumpdb.googlecode.com/hg/django-dumpdb@701c65cd9690a7ab28db39397f489b5b966163bd#egg=django_dumpdb-tip
+boto==2.0b4
+django-ses==0.1
+django-tinymce==1.5.1a1
+#django-static
+slimmer==0.1.30
+django-taggit-templatetags==0.4.6dev
+#django-storages
+django-mediasync==2.1.0
 ## The following requirements were added by pip --freeze:
 CherryPy==3.1.2
-Django==1.2.4
+Django==1.2.5
 Fabric==0.9.3
+GitPython==0.3.1
 MySQL-python==1.2.3
 Numeric==24.2
 South==0.7.3
 amqplib==0.6.1
 anyjson==0.3
+async==0.6.1
 distribute==0.6.12
+django-classy-tags==0.3.3
 django-picklefield==0.1.9
+django-static==1.5.2
+-e hg+https://bitbucket.org/david/django-storages@0181134a8edb01c5f91734ba001ea14be4f22ef7#egg=django_storages-tip
 django-tagging==0.3.1
+django-templatetag-sugar==0.1
 docutils==0.6
+ghettoq==0.4.5
+gitdb==0.5.2
 -e git://github.com/clintecker/django-google-analytics.git@e835a1e1a0eb7d2ce3008daea65c64ad2b539f98#egg=google_analytics-0.2-py2.6-dev
 importlib==1.0.2
 kombu==1.0.2
 logilab-astng==0.21.1
 logilab-common==0.55.0
+odict==1.4.1
 paramiko==1.7.6
 psycopg2==2.3.2
 pyPdf==1.12
