--- a/requirements.txt
+++ b/requirements.txt
@@ -1,26 +1,25 @@
 fabric
 #psycopg2
 mysql-python
-#pysqlite
+
 PIL
 python-memcached
 django >=1.2
 gunicorn
-#-e git://github.com/skoczen/django-cms.git#egg=django-cms
 django-cms >= 2.1.3
+django-tinymce
 pyparsing
 django-xmlrpc
 akismet
-django-taggit
 BeautifulSoup
+-e git://github.com/skoczen/django-form-designer.git#egg=form_designer
+
 django-extensions
 -e git://github.com/skoczen/qi-toolkit.git#egg=qi-toolkit  > 0.3.1
 python-crontab
--e git://github.com/clintecker/django-google-analytics.git#egg=google_
--e git://github.com/skoczen/django-form-designer.git#egg=form_designer
-django-nose-selenium
+-e git://github.com/clintecker/django-google-analytics.git#egg=google_analytics
+
 django-pagination
-django-mailer
 sorl-thumbnail
 tagging
 lorem-ipsum-generator
@@ -28,22 +27,24 @@ nose
 ipython
 django-nose
 nose-exclude
-south
+django-nose-selenium
 -e git://github.com/Almad/django-sane-testing.git#egg=djangosanetesting
 cherrypy
+south
 celery
 django-celery
 -e git://github.com/kmmbvnr/django-jenkins.git#egg=django-jenkins
 coverage >= 3.4
 -e git://github.com/skoczen/nose-xcover.git#egg=nosexcover
+
 -e hg+https://django-dumpdb.googlecode.com/hg/django-dumpdb#egg=django_dumpdb
+
+django-taggit
+django-taggit-templatetags
 boto
 django-ses
-django-tinymce
-#django-static
-slimmer
-django-taggit-templatetags
 #django-storages
 -e hg+https://bitbucket.org/david/django-storages#egg=storages
 django-mediasync
+slimmer
 gitpython
