--- a/requirements.stable.txt
+++ b/requirements.stable.txt
@@ -3,18 +3,18 @@
 PIL==1.1.7
 python-memcached==1.47
 gunicorn==0.12.0
--e git://github.com/divio/django-cms.git@6db7026376177434472b7583ba88f183b5e96790#egg=django_cms-2.1.3-py2.6-dev
+-e git://github.com/divio/django-cms.git@6db7026376177434472b7583ba88f183b5e96790#egg=django_cms-dev
 django-tinymce==1.5.1a1
 pyparsing==1.5.5
 django-xmlrpc==0.1.3
 akismet==0.2.0
 BeautifulSoup==3.2.0
--e git://github.com/skoczen/django-form-designer.git@b9d1716acbda950e440fb13e877d3836e7b0a124#egg=form_designer-3-py2.6-dev
+-e git://github.com/skoczen/django-form-designer.git@b9d1716acbda950e440fb13e877d3836e7b0a124#egg=form_designer-dev
 
 django-extensions==0.6
--e git://github.com/skoczen/qi-toolkit.git@10d8c0ef7ae2c4c48a81b79941ae5cbbd7281b22#egg=qi_toolkit-0.7-py2.6-dev
+-e git://github.com/skoczen/qi-toolkit.git@b788f922e5386693043c513c5e0de2cf97540217#egg=qi_toolkit-dev
 python-crontab==0.9.5
--e git://github.com/clintecker/django-google-analytics.git@e835a1e1a0eb7d2ce3008daea65c64ad2b539f98#egg=google_analytics-0.2-py2.6-dev
+-e git://github.com/clintecker/django-google-analytics.git@e835a1e1a0eb7d2ce3008daea65c64ad2b539f98#egg=google_analytics-dev
 
 django-pagination==1.0.7
 sorl-thumbnail==11.01
@@ -25,14 +25,14 @@ ipython==0.10.1
 django-nose==0.1.2
 nose-exclude==0.1.5
 django-nose-selenium==0.6
--e git://github.com/Almad/django-sane-testing.git@43134814754b6b99058d3727424ee5b2e37238c3#egg=djangosanetesting-0.5.10-py2.6-dev
+-e git://github.com/Almad/django-sane-testing.git@43134814754b6b99058d3727424ee5b2e37238c3#egg=djangosanetesting-dev
 celery==2.2.2
 django-celery==2.2.2
--e git://github.com/kmmbvnr/django-jenkins.git@5d8842303c304beaf28a00af83ce4cc4aca4bd08#egg=django_jenkins-0.10.0-py2.6-dev
+-e git://github.com/kmmbvnr/django-jenkins.git@5d8842303c304beaf28a00af83ce4cc4aca4bd08#egg=django_jenkins-dev
 coverage==3.4
--e git://github.com/skoczen/nose-xcover.git@cccc0e83ce2ed117903768587177a937c144e152#egg=nosexcover-1.0.4-py2.6-dev
+-e git://github.com/skoczen/nose-xcover.git@cccc0e83ce2ed117903768587177a937c144e152#egg=nosexcover-dev
 
--e hg+https://django-dumpdb.googlecode.com/hg/django-dumpdb@701c65cd9690a7ab28db39397f489b5b966163bd#egg=django_dumpdb-tip
+-e hg+https://django-dumpdb.googlecode.com/hg/django-dumpdb@701c65cd9690a7ab28db39397f489b5b966163bd#egg=django_dumpdb-dev
 
 django-taggit==0.9.2
 django-taggit-templatetags==0.4.6dev
@@ -57,7 +57,7 @@ django-classy-tags==0.3.3
 django-mailer==0.1.0
 django-picklefield==0.1.9
 django-static==1.5.2
--e hg+https://bitbucket.org/david/django-storages@0181134a8edb01c5f91734ba001ea14be4f22ef7#egg=django_storages-tip
+-e hg+https://bitbucket.org/david/django-storages@0181134a8edb01c5f91734ba001ea14be4f22ef7#egg=django_storages-dev
 django-tagging==0.3.1
 django-templatetag-sugar==0.1
 docutils==0.6
