trying simpler ssl config

--- a/config.dist/nginx.conf
+++ b/config.dist/nginx.conf
@@ -127,7 +127,7 @@ http {
       listen      443;
       root        /var/www/mycelium.git;
       server_name_in_redirect off;
-      server_name  agoodcloud.com www.agoodcloud.com;
+      server_name  agoodcloud.com;
 
      ## SSL Certs (specific to this URL)
       ssl on;
@@ -143,7 +143,7 @@ http {
       }
 
      ## Deny illegal Host headers
-      if ($host !~* ^(agoodcloud.com|www.agoodcloud.com)$ ) {
+      if ($host !~* ^(agoodcloud.com)$ ) {
         return 444;
       }
 
@@ -164,9 +164,9 @@ http {
      #}
 
      ## Redirect from non-www to www
-     if ($host = 'www.agoodcloud.com' ) {
-       rewrite  ^/(.*)$  https://agoodcloud.com/$1  permanent;
-     }
+     # if ($host = 'www.agoodcloud.com' ) {
+     #   rewrite  ^/(.*)$  https://agoodcloud.com/$1  permanent;
+     # }
 
      ## Stop Image and Document Hijacking
       location ~* (\.jpg|\.gif|\.png|\.css)$ {
@@ -186,9 +186,9 @@ http {
               proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
       }
 
-      location /media/ {
-              root /var/www/mycelium.git;
-      }
+     #location /media/ {
+     #        root /var/www/mycelium.git;
+     #}
     
      ## All other errors get the generic error page
      #error_page 400 401 402 403 404 405 406 407 408 409 410 411 412 413 414 415 416 417 495 496 497
