--- a/config.dist/nginx.conf
+++ b/config.dist/nginx.conf
@@ -127,7 +127,7 @@ http {
       listen      443;
       root        /var/www/mycelium.git;
       server_name_in_redirect off;
-      server_name  agoodcloud.com;
+      server_name  www.agoodcloud.com agoodcloud.com;
 
      ## SSL Certs (specific to this URL)
       ssl on;
@@ -143,9 +143,9 @@ http {
       }
 
      ## Deny illegal Host headers
-      if ($host !~* ^(agoodcloud.com)$ ) {
-        return 444;
-      }
+     #if ($host !~* ^(agoodcloud.com)$ ) {
+     #  return 444;
+     #}
 
      ## Deny certain User-Agents (case insensitive)
      #if ($http_user_agent ~* (Baiduspider|webalta|Wget|WordPress|youdao) ) {
@@ -164,13 +164,13 @@ http {
      #}
 
      ## Redirect from non-www to www
-     # if ($host = 'www.agoodcloud.com' ) {
-     #   rewrite  ^/(.*)$  https://agoodcloud.com/$1  permanent;
-     # }
+     if ($host = 'agoodcloud.com' ) {
+       rewrite  ^/(.*)$  https://www.agoodcloud.com/$1  permanent;
+     }
 
      ## Stop Image and Document Hijacking
       location ~* (\.jpg|\.gif|\.png|\.css)$ {
-        if ($http_referer !~ ^(https://agoodcloud.com) ) {
+        if ($http_referer !~ ^(https://www.agoodcloud.com) ) {
           return 444;
         }
       }
