--- a/config.dist/nginx.conf
+++ b/config.dist/nginx.conf
@@ -185,6 +185,10 @@ http {
               proxy_set_header X-Real-IP $remote_addr;
               proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
               proxy_set_header X_FORWARDED_PROTO https;
+              proxy_set_header  Host $http_host;
+              proxy_set_header  X-Url-Scheme $scheme;
+              proxy_redirect    off;
+              proxy_max_temp_file_size 0;              
       }
 
      #location /media/ {
