--- a/config.dist/nginx.conf
+++ b/config.dist/nginx.conf
@@ -127,7 +127,7 @@ http {
       listen      443;
       root        /var/www/mycelium.git;
       server_name_in_redirect off;
-      server_name  www.agoodcloud.com agoodcloud.com;
+      server_name  agoodcloud.com www.agoodcloud.com;
 
      ## SSL Certs (specific to this URL)
       ssl on;
@@ -164,13 +164,13 @@ http {
      #}
 
      ## Redirect from non-www to www
-     if ($host = 'agoodcloud.com' ) {
-       rewrite  ^/(.*)$  https://www.agoodcloud.com/$1  permanent;
+     if ($host = 'www.agoodcloud.com' ) {
+       rewrite  ^/(.*)$  https://agoodcloud.com/$1  permanent;
      }
 
      ## Stop Image and Document Hijacking
       location ~* (\.jpg|\.gif|\.png|\.css)$ {
-        if ($http_referer !~ ^(https://www.agoodcloud.com) ) {
+        if ($http_referer !~ ^(https://agoodcloud.com) ) {
           return 444;
         }
       }
@@ -184,6 +184,7 @@ http {
               proxy_pass      http://127.0.0.1:8000; 
               proxy_set_header X-Real-IP $remote_addr;
               proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+              proxy_set_header HTTP_X_FORWARDED_PROTO https;
               proxy_set_header X-Forwarded-Proto https;
               proxy_set_header  Host $http_host;
               proxy_set_header  X-Url-Scheme $scheme;
