--- a/config.dist/nginx.conf
+++ b/config.dist/nginx.conf
@@ -186,7 +186,8 @@ http {
               proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
               proxy_set_header HTTP_X_FORWARDED_PROTO https;
               proxy_set_header X-Forwarded-Proto https;
-              proxy_set_header  Host $http_host;
+              proxy_set_header HTTP_X_FORWARDED_SSL on;
+              proxy_set_header  Host $host;
               proxy_set_header  X-Url-Scheme $scheme;
               proxy_redirect    off;
               proxy_max_temp_file_size 0;              
