--- a/config.dist/nginx.conf
+++ b/config.dist/nginx.conf
@@ -181,12 +181,12 @@ http {
       }
 
       location / {
-              proxy_pass      http://127.0.0.1:8000; 
+              proxy_pass      127.0.0.1:8000; 
               proxy_redirect     off;
               proxy_set_header   Host             $host;
               proxy_set_header   X-Real-IP        $remote_addr;
               proxy_set_header   X-Forwarded-For  $proxy_add_x_forwarded_for;
-              proxy_set_header   X-Forwarded-Protocol https;
+              proxy_set_header   X-Forwarded-Proto https;
               
               #proxy_set_header X-Real-IP $remote_addr;
               #proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
