--- a/config.dist/nginx.conf
+++ b/config.dist/nginx.conf
@@ -181,7 +181,7 @@ http {
       }
 
       location / {
-              proxy_pass      127.0.0.1:8000; 
+              proxy_pass      http://127.0.0.1:8000; 
               proxy_redirect     off;
               proxy_set_header   Host             $host;
               proxy_set_header   X-Real-IP        $remote_addr;
