trying nginx proxy

--- a/config.dist/nginx.conf
+++ b/config.dist/nginx.conf
@@ -74,7 +74,9 @@ http {
       }
   }
 
-
+#    upstream webbackend  {
+#      server goodcloud.posterous.com
+#    }
 
 
  ## Redirect http to https
@@ -197,6 +199,10 @@ http {
               #proxy_set_header  X-Url-Scheme $scheme;
               #proxy_redirect    off;
               #proxy_max_temp_file_size 0;              
+      }
+
+      location /blog/ {
+        proxy_pass http://goodcloud.posterous.com/;
       }
 
      #location /media/ {
