damn, that doesn't work

--- a/config.dist/nginx.conf
+++ b/config.dist/nginx.conf
@@ -74,10 +74,6 @@ http {
       }
   }
 
-#    upstream webbackend  {
-#      server goodcloud.posterous.com
-#    }
-
 
  ## Redirect http to https
   server {
@@ -201,9 +197,9 @@ http {
               #proxy_max_temp_file_size 0;              
       }
 
-      location /blog/ {
-        proxy_pass http://goodcloud.posterous.com/;
-      }
+     #location /blog/ {
+     #  proxy_pass http://goodcloud.posterous.com/;
+     #}
 
      #location /media/ {
      #        root /var/www/mycelium.git;
