--- a/requirements.stable.txt
+++ b/requirements.stable.txt
@@ -12,7 +12,7 @@ BeautifulSoup==3.2.0
 -e git://github.com/skoczen/django-form-designer.git@b9d1716acbda950e440fb13e877d3836e7b0a124#egg=form_designer-dev
 
 django-extensions==0.6
--e git://github.com/skoczen/qi-toolkit.git@f9f0a9d4af872e15b3f0cc0a7ad33315a91f3624#egg=qi_toolkit-dev
+-e git://github.com/skoczen/qi-toolkit.git@c80f3286afeaa0c2ace7da96d633a1bc03031752#egg=qi_toolkit-dev
 python-crontab==0.9.5
 -e git://github.com/clintecker/django-google-analytics.git@e835a1e1a0eb7d2ce3008daea65c64ad2b539f98#egg=google_analytics-dev
 
@@ -28,7 +28,7 @@ django-nose-selenium==0.6
 -e git://github.com/Almad/django-sane-testing.git@43134814754b6b99058d3727424ee5b2e37238c3#egg=djangosanetesting-dev
 celery==2.2.2
 django-celery==2.2.2
--e git://github.com/kmmbvnr/django-jenkins.git@5d8842303c304beaf28a00af83ce4cc4aca4bd08#egg=django_jenkins-dev
+-e git://github.com/kmmbvnr/django-jenkins.git@2dc403c1d2ae3e73fc18dc45408e460b800feb72#egg=django_jenkins-dev
 coverage==3.4
 -e git://github.com/skoczen/nose-xcover.git@cccc0e83ce2ed117903768587177a937c144e152#egg=nosexcover-dev
 
@@ -41,13 +41,14 @@ django-ses==0.1
 #django-storages
 django-mediasync==2.1.0
 slimmer==0.1.30
+django-debug-toolbar==0.8.4
 ## The following requirements were added by pip --freeze:
 CherryPy==3.1.2
 Django==1.2.5
 Fabric==0.9.3
 GitPython==0.3.1
 MySQL-python==1.2.3
-#Numeric==24.2
+Numeric==24.2
 South==0.7.3
 amqplib==0.6.1
 anyjson==0.3
@@ -56,7 +57,7 @@ distribute==0.6.12
 django-classy-tags==0.3.3
 django-mailer==0.1.0
 django-picklefield==0.1.9
--e hg+https://bitbucket.org/david/django-storages@0181134a8edb01c5f91734ba001ea14be4f22ef7#egg=django_storages-dev
+-e hg+https://bitbucket.org/david/django-storages@2b44d79635e6c65e917ef5fb3111c9ed2e9a86b7#egg=django_storages-dev
 django-tagging==0.3.1
 django-templatetag-sugar==0.1
 docutils==0.6
