--- a/requirements.txt
+++ b/requirements.txt
@@ -50,3 +50,4 @@ django-mediasync
 slimmer
 gitpython
 django-debug-toolbar
+-e git://github.com/gintas/django-picklefield.git#egg=django-picklefield
