--- a/requirements.stable.txt
+++ b/requirements.stable.txt
@@ -1,9 +1,10 @@
 #psycopg2
+python-dateutil==1.5
 
 PIL==1.1.7
 python-memcached==1.47
 gunicorn==0.12.0
--e git://github.com/divio/django-cms.git@6db7026376177434472b7583ba88f183b5e96790#egg=django_cms-dev
+django-cms==2.1.3
 django-tinymce==1.5.1a1
 pyparsing==1.5.5
 django-xmlrpc==0.1.3
@@ -12,7 +13,7 @@ BeautifulSoup==3.2.0
 -e git://github.com/skoczen/django-form-designer.git@b9d1716acbda950e440fb13e877d3836e7b0a124#egg=form_designer-dev
 
 django-extensions==0.6
--e git://github.com/skoczen/qi-toolkit.git@c80f3286afeaa0c2ace7da96d633a1bc03031752#egg=qi_toolkit-dev
+-e git://github.com/skoczen/qi-toolkit.git@8cac2a121ddd42247d4d654daaec7d2851c52a68#egg=qi_toolkit-dev
 python-crontab==0.9.5
 -e git://github.com/clintecker/django-google-analytics.git@e835a1e1a0eb7d2ce3008daea65c64ad2b539f98#egg=google_analytics-dev
 
@@ -25,10 +26,10 @@ ipython==0.10.1
 django-nose==0.1.2
 nose-exclude==0.1.5
 django-nose-selenium==0.6
--e git://github.com/Almad/django-sane-testing.git@43134814754b6b99058d3727424ee5b2e37238c3#egg=djangosanetesting-dev
+-e git://github.com/Almad/django-sane-testing.git@ae820c77cfa5ef9715600046966b46c81f1ee249#egg=djangosanetesting-dev
 celery==2.2.2
 django-celery==2.2.2
--e git://github.com/kmmbvnr/django-jenkins.git@2dc403c1d2ae3e73fc18dc45408e460b800feb72#egg=django_jenkins-dev
+-e git://github.com/kmmbvnr/django-jenkins.git@78c5716da67fe1c2270b5b6aa68391f44ac2387a#egg=django_jenkins-dev
 coverage==3.4
 -e git://github.com/skoczen/nose-xcover.git@cccc0e83ce2ed117903768587177a937c144e152#egg=nosexcover-dev
 
@@ -42,6 +43,7 @@ django-ses==0.1
 django-mediasync==2.1.0
 slimmer==0.1.30
 django-debug-toolbar==0.8.4
+django-picklefield==0.1.9
 ## The following requirements were added by pip --freeze:
 CherryPy==3.1.2
 Django==1.2.5
@@ -51,12 +53,11 @@ MySQL-python==1.2.3
 Numeric==24.2
 South==0.7.3
 amqplib==0.6.1
-anyjson==0.3
+anyjson==0.3.1
 async==0.6.1
 distribute==0.6.12
-django-classy-tags==0.3.3
+django-classy-tags==0.3.3.1
 django-mailer==0.1.0
-django-picklefield==0.1.9
 -e hg+https://bitbucket.org/david/django-storages@2b44d79635e6c65e917ef5fb3111c9ed2e9a86b7#egg=django_storages-dev
 django-tagging==0.3.1
 django-templatetag-sugar==0.1
@@ -64,7 +65,7 @@ docutils==0.6
 ghettoq==0.4.5
 gitdb==0.5.2
 importlib==1.0.2
-kombu==1.0.2
+kombu==1.1.2
 logilab-astng==0.21.1
 logilab-common==0.55.0
 odict==1.4.1
@@ -75,7 +76,6 @@ pycrypto==2.3
 pycurl==7.19.0
 pylint==0.23.0
 pysqlite==2.6.0
-python-dateutil==1.5
 pytz==2010h
 reportlab==2.4
 roman==1.4.0
