--- a/requirements.stable.txt
+++ b/requirements.stable.txt
@@ -50,7 +50,7 @@ Django==1.2.5
 Fabric==0.9.3
 GitPython==0.3.1
 MySQL-python==1.2.3
-Numeric==24.2
+#Numeric==24.2
 South==0.7.3
 amqplib==0.6.1
 anyjson==0.3.1
