--- a/requirements.stable.txt
+++ b/requirements.stable.txt
@@ -48,7 +48,7 @@ django-picklefield==0.1.9
 CherryPy==3.1.2
 Django==1.2.5
 Fabric==0.9.3
-GitPython==0.3.1
+GitPython
 MySQL-python==1.2.3
 #Numeric==24.2
 South==0.7.3
